<resources>
    <string name="app_name">欧卡小蓝船</string>
    <string name="aim_angle">目标方向角：</string>
    <string name="gyro_angle">陀螺仪方向角：</string>
    <string name="curr_vel">当前速度：</string>
    <string name="curr_lat">当前纬度：</string>
    <string name="curr_lng">当前经度：</string>
    <string name="raw_data">原始数据：</string>
    <string name="gps_num">当前卫星数量：</string>
    <string name="ble_not_supported">当前系统不支持BLE！</string>
    <string name="btn_poweron">开启小蓝船</string>
    <string name="lable_shortcut_static_search_long">图传</string>
    <string name="lable_shortcut_static_search_short">图传</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
