<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/shape_gradient"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@drawable/shape_gradient">
        <ImageButton
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/new_connect2"
            android:background="#00FFFFFF"
            android:id="@+id/btn_disconnect"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="导航"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="16sp"/>
            <lib.kingja.switchbutton.SwitchMultiButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:id="@+id/sw_nav"
                android:layout_margin="4dp"
                android:padding="10dp"
                app:strokeRadius="15dp"
                app:strokeWidth="2dp"
                app:selectedColor="#ffffff"
                app:switchTabs="@array/switch_tabs"
                app:textSize="13sp"/>
        </LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:scaleType="centerInside"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/more"
            android:id="@+id/btn_more"
            android:background="#00FFFFFF"
            android:layout_marginEnd="5dp"/>
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.amap.api.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mapview">
        </com.amap.api.maps.MapView>
        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dp"
            app:menu_showShadow="true"
            app:menu_icon="@drawable/normal_map"
            app:menu_colorNormal="@color/colorPurple"
            app:menu_colorPressed="@color/colorBlue"
            app:menu_openDirection="down"
            app:menu_fab_size="mini">
            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/normal_map"
                android:id="@+id/fab_plane"
                app:fab_colorNormal="@color/colorPurple"
                app:fab_colorPressed="@color/colorBlue"
                app:fab_size="mini"/>
            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/satellite_map"
                android:id="@+id/fab_satellite"
                app:fab_colorNormal="@color/colorPurple"
                app:fab_colorPressed="@color/colorBlue"
                app:fab_size="mini"/>
        </com.github.clans.fab.FloatingActionMenu>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:visibility="gone"
            android:background="#646c6c6c">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:text="温度："/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:text="浊度："/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:text="TDS："/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:text="PH："/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15°C"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_tmp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="200Tu"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_tu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_tds"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7.5"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_ph"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/textview_border"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/gps_num"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/gyro_angle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/aim_angle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/curr_vel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/curr_lat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/curr_lng"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/mb_white"
                    android:text="@string/raw_data"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_gps_num"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_gyro_angle"
                    android:text="0.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_aim_angle"
                    android:text="0.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_curr_vel"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_curr_lat"
                    android:text="0.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_curr_lng"
                    android:text="0.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mb_white"
                    android:id="@+id/tv_raw_data"
                    android:scrollbars="vertical"/>
            </LinearLayout>


        </LinearLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:background="@drawable/angle_circle"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pointer_aim"
                android:id="@+id/ivPointerAim"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pointer_gyro"
                android:id="@+id/ivPointerGyro"/>
        </FrameLayout>

        <app.dinus.com.loadingdrawable.LoadingView
            android:id="@+id/loadingview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffd4d9da"
            android:layout_gravity="center"
            app:loading_renderer="CircleBroodLoadingRenderer"
            android:visibility="gone"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradient"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:layout_margin="5dp"
            android:id="@+id/btn_gostop"
            android:drawableTop="@drawable/start"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:enabled="false"
            android:text="暂停"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:layout_margin="5dp"
            android:id="@+id/btn_calc"
            android:drawableTop="@drawable/calc"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:text="计算"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:layout_margin="5dp"
            android:id="@+id/btn_route"
            android:drawableTop="@drawable/routine"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:text="路线"/>
    </LinearLayout>
</LinearLayout>